--- a/CSS TUTORIAL/css(17)/style.css
+++ b/CSS TUTORIAL/css(17)/style.css
@@ -2,11 +2,14 @@
     height: 100px;
     width: 100px;
     background-color: aquamarine;
+    font-size: 10px;
 }
 #box2{
     height: 50px;
     width: 50%;
     background-color: blueviolet;
     margin-left: 30%;
+    font-size: 2em; 
+    width: 5em;
 
 }
